derive-macros/tests/field_id_validation/float_literal.stderr
error: field_id error: Expected field-id to be an integer
 --> tests/field_id_validation/float_literal.rs:5:18
  |
5 |     #[field_id = 123.45]  // Should be integer, not float
  |                  ^^^^^^
